--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,18 +2,25 @@
 <html lang="en">
 
 <head>
+  
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/tea-rex-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Changa&display=swap" rel="stylesheet">
+  
   <title>Tea-Rex</title>
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqgP43SARskbuxpyajGacfm304krkUmBE"
+      async
+      defer
+    ></script>
 </body>
 
 </html>
