--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,10 @@
 
 <body>
   <div id="root"></div>
+
+  <script src="https://product-gallery.cloudinary.com/all.js" type="text/javascript">  
+  </script>
+  
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
