--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,36 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    
-    <link rel="icon" type="image/png" href="/tea-rex-logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Changa&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap"
-      rel="stylesheet"
-    />
 
-    <title>Tea-Rex</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="description"
+    content="Tea-Rex: Your Dino-Mite Boba Destination in Elk Grove! Visit us for a roaring good time with our delicious boba tea, brewed to perfection. Explore a prehistoric twist on your favorite beverages, and discover a Jurassic flavor adventure at our local boba shop!">
 
-  <body>
-    <div id="root"></div>
+  <link rel="icon" type="image/png" href="/tea-rex-logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Changa&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet" />
 
-    <script
-      src="https://product-gallery.cloudinary.com/all.js"
-      type="text/javascript"
-    ></script>
+  <title>Tea-Rex</title>
+</head>
 
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+
+  <script src="https://product-gallery.cloudinary.com/all.js" type="text/javascript"></script>
+
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
